--- a/style.css
+++ b/style.css
@@ -1,65 +1,58 @@
-*{
+* {
     margin: 0;
     padding: 0;
     border-width: 0px;
     box-sizing: border-box;
-    
 }
 
-body, html {
+body,
+html {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100vh;
     font-size: 16px;
     background-color: black;
     color: white;
 }
-/* .background{
+
+.background {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    opacity: 0.2;
-    background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/disp/33e97898168295.5ed9008f5a1c6.gif);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-} */
-
-.wrapper{
-    text-align: center;
-    margin: 0 auto;
-
+    top: 50%;
+    left: 50%;
+    background-image: url(https://i1.wp.com/storytellersnightsky.com/wp-content/uploads/2018/09/Virgo-star-map.gif?ssl=1);
+    background-size: auto 100%;
 }
 
-.type{
+.wrapper {
+    text-align: center;
+    margin: 0 auto;
+}
+
+.type {
     font-size: 3vw;
     margin-bottom: 1rem;
 }
 
-.title{
+.title {
     font-size: 5vw;
     font-weight: bold;
     margin-bottom: 1.2rem;
 }
 
-#getCntconstella{
+#getCntconstella {
     display: block;
     margin: 0 auto;
     font-size: 2vw;
     padding-left: 1em;
     padding-right: 1em;
-    height : 3em;
+    height: 3em;
     border-radius: 0.2em;
 }
 
-.selectBox{
+.selectBox {
     font-size: 2vw;
     padding-left: 1em;
     padding-right: 1em;
-    height : 3em;
+    height: 3em;
     border-radius: 0.2em;
 }
