--- a/style.css
+++ b/style.css
@@ -3,56 +3,135 @@
     padding: 0;
     border-width: 0px;
     box-sizing: border-box;
+    font-family: "Zilla Slab";
+}
+
+.siteTitle {
+    transform: rotate(-90deg);
+    position: absolute;
+    left: -42px;
+    top: 50%;
+    z-index: 5;
+    letter-spacing: 1px;
+}
+
+.bgLine {
+    position: absolute;
+    width: 100px;
+    height: 100vh;
+    border-right: solid 1px #fff;
+    opacity: 0.4;
+    z-index: 5;
 }
 
 body,
 html {
+    position: absolute;
     display: flex;
+    width: 100%;
+    height: 100vh;
+    font-size: 16px;
+    color: white;
     justify-content: center;
     align-items: center;
-    font-size: 16px;
-    background-color: black;
-    color: white;
+    overflow: hidden;
+}
+
+.bgWarpper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    width: 100%;
+    height: 100vh;
 }
 
 .background {
-    position: absolute;
+    z-index: -5;
+    position: relative;
+    background-position: center, center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 120%;
+    height: 120vh;
+    background-image: url(img/background.png);
+}
+
+.frame {
+    position: fixed;
     top: 50%;
     left: 50%;
-    background-image: url(https://i1.wp.com/storytellersnightsky.com/wp-content/uploads/2018/09/Virgo-star-map.gif?ssl=1);
-    background-size: auto 100%;
+    transform: translate(-50%, -50%);
+    background-position: center, center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 120%;
+    height: 120vh;
+    background-image: url(img/frame.png);
 }
 
 .wrapper {
-    text-align: center;
+    position: absolute;
+    right: 50px;
+    bottom: 50px;
     margin: 0 auto;
+    z-index: 10;
+    text-align: right;
 }
 
-.type {
+.result {
     font-size: 3vw;
     margin-bottom: 1rem;
 }
 
 .title {
-    font-size: 5vw;
-    font-weight: bold;
-    margin-bottom: 1.2rem;
+    font-size: 40px;
+    margin-bottom: 24px;
 }
 
-#getCntconstella {
+.btnGroup {
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+}
+
+.getCntconstella {
     display: block;
-    margin: 0 auto;
     font-size: 2vw;
     padding-left: 1em;
     padding-right: 1em;
     height: 3em;
     border-radius: 0.2em;
+}
+
+.selectGroup {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0 0 0 auto;
 }
 
 .selectBox {
-    font-size: 2vw;
-    padding-left: 1em;
-    padding-right: 1em;
-    height: 3em;
-    border-radius: 0.2em;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    line-height: 80px;
+    font-size: 80px;
+    border: 0;
+    width: 130px;
+}
+
+.selectBox:first-child {
+    margin-right: 20px;
+}
+
+.line {
+    height: 1px;
+    width: 60px;
+    background-color: #fff;
+}
+
+.canv {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
